[package]
name = "pdifflib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ndarray = "0.15.0"
ndarray-stats = "0.5.0"
queues = "1.0.2"

nalgebra="0.31.4"
csv = "1.1"
serde =  { version = "1.0", features = ["derive"] }
toml = "0.5.2"

